--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jul 07 05:59:34 IST 2018
-sdk.dir=/home/ramakrishna/Android/Sdk
+#Mon Jul 09 08:51:25 IST 2018
+ndk.dir=/home/rmanga/sdk/android-sdk-linux/ndk-bundle
+sdk.dir=/home/rmanga/sdk/android-sdk-linux
